--- a/chat/templates/home.html
+++ b/chat/templates/home.html
@@ -11,7 +11,7 @@
   <a href="{% url 'index' %}">Chat</a>
 {% else %}
   <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a> |
+  <a href="{% url 'custom_login' %}">Log In</a> |
   <a href="{% url 'signup' %}">Sign Up</a> |
 {% endif %}
 {% endblock %}
