--- a/chat/templates/customLogin.html
+++ b/chat/templates/customLogin.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <html>
     <p>this is the custom login page</p>
     <form action="" method="post">
@@ -9,3 +12,4 @@
         <button type="submit">Login</button>
     </form>
 </html>
+{% endblock content %}
