--- a/chat/templates/index.html
+++ b/chat/templates/index.html
@@ -1,12 +1,7 @@
-<!-- chat/templates/chat/index.html -->
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Rooms</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
+<div style="background-color: rgba(255, 255, 255, 0.7);">
     What chat room would you like to enter?<br>
     <input id="room-name-input" type="text" size="100"><br>
     <input id="room-name-submit" type="button" value="Enter">
@@ -25,5 +20,11 @@
         };
         
     </script>
-</body>
-</html>
+
+</div>
+    
+{% endblock content %}
+
+
+
+
