--- a/chat/static/style.css
+++ b/chat/static/style.css
@@ -6,11 +6,18 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    height: 100vh; /* Ensure the body takes full viewport height */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Ensure the body takes full viewport height */
     flex-direction: column;
+    min-height: 100vh; /* Ensure the container takes full viewport height */
 }
 
 nav {
@@ -46,7 +53,7 @@ form {
 }
 
 textarea {
-    background-color:  rgba(255, 255, 255, 0.7);;
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 #login {
@@ -63,4 +70,13 @@ textarea {
     background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background for readability */
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Slight shadow for better visibility */
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 600px;
+
 }
