--- a/chat/static/style.css
+++ b/chat/static/style.css
@@ -25,7 +25,6 @@ nav {
     padding: 10px;
     padding-left: 50px;
     box-sizing: border-box;
-    position: absolute;
     top: 0;
 }
 
@@ -76,7 +75,16 @@ textarea {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.7);
-    width: 600px;
-
+    border: 2px solid rgb(255, 0, 0);
+    width: 500px;
 }
+
+#post {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    border: 2px solid rgb(255, 0, 0);
+    margin: 20px;
+} 
+
