--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </head>
 <body>
