--- a/chat/templates/new_post.html
+++ b/chat/templates/new_post.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-
 <nav>
-<a href="{% url 'new_post' %}">create post</a>
-
-<a class="leftist" href="{% url 'posts' %}">posts</a>
+    <a href="{% url 'new_post' %}">Create Post</a>
+    <a class="leftist" href="{% url 'posts' %}">Posts</a>
 </nav>
 
-<form action="{% url 'new_post' %}" method="post" enctype="multipart/form-data">
-    <h1>create your post</h1>
+<form id="post-form" action="{% url 'new_post' %}" method="post" enctype="multipart/form-data">
+    <h1>Create Your Post</h1>
     {% csrf_token %}
     {{ form.as_p }}
+    <div class="g-recaptcha" data-sitekey="{{ recaptcha_site_key }}"></div>
     <button type="submit">Save</button>
 </form>
 
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 {% endblock content %}
